--- a/Shakira.html
+++ b/Shakira.html
@@ -4,6 +4,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>My Favorite Musician</title>
+  <style>
+    h1{
+    font-size: 100;
+    text-align: center;
+    color: blue;
+    }
+  </style>
 </head>
 <body>
   <h1>Shakira, Shakira</h1>
