--- a/Shakira.html
+++ b/Shakira.html
@@ -4,20 +4,18 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>My Favorite Musician</title>
-  <style>
-    h1{
-    font-size: 100;
-    text-align: center;
-    color: blue;
-    }
-  </style>
+  <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
   <h1>Shakira, Shakira</h1>
   <img src="shakira.jpg" alt="Shakira" width="500" height="500">
-  <p> <ol>Shakira was born in Colombia</ol>
+  <p> 
+    <li>
+      <ol>Shakira was born in Colombia</ol>
   <ol>Shakira dances well</ol>
-<ol>Shakira is well known</ol></p>
-  
+<ol>Shakira is well known</ol>
+</li>
+</p>
+
 </body>
 </html>
