--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
 </head>
 <body>
     <h1>Hello World!</h1>
-    <h2>I am Andrea</h2>
+    <h2>I am Andrea, a UX Designer now practicing Front-End Development</h2>
+    <p>Here are all the projects and in-class exercises from GWU Bootcamp:
+        <li>
+            <a href="myfavoritemusician.html">Week 17, Exercises 17.1: My favorite Musician</a> 
+        </li>
+    </p>
 </body>
 </html>
