--- a/myfavoritemusician.html
+++ b/myfavoritemusician.html
@@ -6,16 +6,22 @@
   <title>My Favorite Musician</title>
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
+
 <body>
-  <h1>Shakira, Shakira</h1>
+  <h1>My Favorite Musicians</h1>
+  <h2>Shakira</h2>
   <img src="shakira.jpg" alt="Shakira" width="500" height="500">
   <p> 
-    <li>
-      <ol>Shakira was born in Colombia</ol>
-  <ol>Shakira dances well</ol>
-<ol>Shakira is well known</ol>
-</li>
+      <ol>Shakira is a Colombian singer. She is well known for her songs <a href="https://www.youtube.com/watch?v=DUT5rEU6pqM">Hips don't lie</a> and <a href="https://www.youtube.com/watch?v=CT8xMunS608">La La La (Waka waka)</a></ol>
+  <br>
+  <ol>Shakira is married to Spanish soccer player Pique, and they have two sons: Milan and Sasha.</ol>
+<br>
+<ol>My favorite songs from Shakira are:</ol>
+<ul>Sale el Sol</ul>
+<ul>Gitana</ul>
+<ul>Antologia</ul>
+<br>
+You may not recognize these songs. That's because I like her old songs and sound better.
 </p>
-
 </body>
 </html>
