--- a/myfavoritemusician.html
+++ b/myfavoritemusician.html
@@ -9,19 +9,34 @@
 
 <body>
   <h1>My Favorite Musicians</h1>
-  <h2>Shakira</h2>
-  <img src="shakira.jpg" alt="Shakira" width="500" height="500">
+  <h2>1. Shakira</h2>
+  <img src="shakira.jpg" alt="Shakira" class="shakira">
   <p> 
-      <ol>Shakira is a Colombian singer. She is well known for her songs <a href="https://www.youtube.com/watch?v=DUT5rEU6pqM">Hips don't lie</a> and <a href="https://www.youtube.com/watch?v=CT8xMunS608">La La La (Waka waka)</a></ol>
+  Shakira is a Colombian singer. She is well known for her songs <a href="https://www.youtube.com/watch?v=DUT5rEU6pqM">Hips don't lie</a> and <a href="https://www.youtube.com/watch?v=CT8xMunS608">La La La (Waka waka)</a>
   <br>
-  <ol>Shakira is married to Spanish soccer player Pique, and they have two sons: Milan and Sasha.</ol>
+  Shakira is married to Spanish soccer player Pique, and they have two sons: Milan and Sasha.
 <br>
-<ol>My favorite songs from Shakira are:</ol>
-<ul>Sale el Sol</ul>
-<ul>Gitana</ul>
-<ul>Antologia</ul>
+My favorite songs from Shakira are:
+<ol start="1">
+  <li>Sale el Sol </li>
+<li>Gitana</li>
+<li>Antologia</li>
+</ol>
 <br>
-You may not recognize these songs. That's because I like her old songs and sound better.
+You may not recognize these songs. That's because I like her old songs better than the new. My opinion is shared by most Colombians.
+<br>
+<h2>2. Maroon Five</h2>
+<img src="maroon5.jpg" alt="MaroonFive" class="maroon5">
+<br>
+Maroon Five is an american band whose lead singer is Adam Levine. He is married to Behati Prinslo, a Victoria Secret Model from Namibia. They have two girls.
+<br>
+My favorite songs are:
+<ol>
+  <li>Wake up call</li>
+  <li>I won't go home without you</li>
+  <li>Don't wanna know</li>
+  <li>One more night</li>
+</ol>
 </p>
 </body>
 </html>
