Hiperlink to return to the main HTML doc

--- a/myfavoritemusician.html
+++ b/myfavoritemusician.html
@@ -37,6 +37,8 @@ My favorite songs are:
   <li>Don't wanna know</li>
   <li>One more night</li>
 </ol>
+<br>
+Go back <a href="index.html">Home</a>
 </p>
 </body>
 </html>
