Added a new document for exercise 17.2

--- a/index.html
+++ b/index.html
@@ -9,9 +9,14 @@
     <h1>Hello World!</h1>
     <h2>I am Andrea, a UX Designer now practicing Front-End Development</h2>
     <p>Here are all the projects and in-class exercises from GWU Bootcamp:
+        <ul>
         <li>
-            <a href="myfavoritemusician.html">Week 17, Exercises 17.1: My favorite Musician</a> 
+            <a href="MyFavoriteMusician/myfavoritemusician.html">Week 17, Exercises 17.1: My favorite Musician</a> 
         </li>
+        <li>
+            <a href="USPS_Style_Guide/USPSStyleGuide.html">Week 17, Exercises 17.2: USPS Style Guide</a> 
+        </li>
+    </ul>
     </p>
 </body>
 </html>
