--- a/MyFavoriteMusician/myfavoritemusician.html
+++ b/MyFavoriteMusician/myfavoritemusician.html
@@ -10,7 +10,7 @@
 <body>
   <h1>My Favorite Musicians</h1>
   <h2>1. Shakira</h2>
-  <img src="shakira.jpg" alt="Shakira" class="shakira">
+  <img src="Shakira.jpg" alt="Shakira" class="shakira">
   <p> 
   Shakira is a Colombian singer. She is well known for her songs <a href="https://www.youtube.com/watch?v=DUT5rEU6pqM">Hips don't lie</a> and <a href="https://www.youtube.com/watch?v=CT8xMunS608">La La La (Waka waka)</a>
   <br>
