added a new exercise

--- a/USPS_Style_Guide/USPSStyleGuide.html
+++ b/USPS_Style_Guide/USPSStyleGuide.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>USPS Style Guide</title>
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
   <link href="css/style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
@@ -13,7 +14,7 @@
 </section>
 <!-- Color Palette section -->
 <section>
-  <h1 id="pagetopic"> USPS Style Guide</h1>
+  <h1 id="pageTopic"> USPS Style Guide</h1>
 <h2 id="sectionHead">Primary Colors</h2>
 <div class="colorContainer">
   <div class="swatch darkBlue">
