--- a/USPS_Style_Guide/USPSStyleGuide.html
+++ b/USPS_Style_Guide/USPSStyleGuide.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>USPS Style Guide</title>
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
-  <link href="css/style.css" rel="stylesheet" type="text/css">
+  <link href="style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 <!-- Header section here -->
