added new exercise

--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
         <li>
             <a href="USPS_Style_Guide/USPSStyleGuide.html">Week 17, Exercises 17.2: USPS Style Guide</a> 
         </li>
+        <li>
+            <a href="1_floats/float.html">Week 17, Exercises 17.3: CSS Positioning Exercises</a>
+        </li>
     </ul>
     </p>
 </body>
