--- a/1_floats/float.html
+++ b/1_floats/float.html
@@ -4,9 +4,10 @@
   <link href="css/index.css" type="text/css" rel="stylesheet">
 </head>
 <body>
+  <h1>Float</h1>
   <div class="separator">
     <img src="images/rubberDucky.jpg" class="left">
-    <h1>Your First Heading</h1>
+    <h2>Your First Heading</h2>
     <p>
       Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
     </p>
@@ -14,7 +15,7 @@
       Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
     </p>
     <img src="images/space.jpg" class="right">
-    <h1>Your Second Heading</h1>
+    <h2>Your Second Heading</h2>
     <p>
       Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
     </p>
@@ -25,7 +26,51 @@
 
       Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
     </p>
-
   </div>
+  <br>
+  <h1>Positioning Block and Inline Elements</h1>
+  <section>
+    <div class="block_element">
+      <img src="images/face.png">
+      <h1>Sign up to get started today!</h1>
+      <p>This is a paragraph that would describe in greater detail the header above</p>
+      <form>
+        <h3>First Name:</h3>
+        <input type="text" placeholder="first name"></input>
+        <h3>Last Name:</h3>
+        <input type="text" placeholder="last name"></input>
+        <h3>Email:</h3>
+        <input type="text" placeholder="email"></input>
+        <input class="submit" type="submit" value="Get Started"></input>
+      </form>
+    </div>
+  </section>
+  <br>
+
+  <h1>Positioning Inline-Block Elements</h1>
+  <nav>
+     <a href="https://google.com"><div class="inline-block">Nav Item 1</div></a>
+      <a href="https://google.com"><div class="inline-block">Nav Item 1</div></a>
+      <a href="https://google.com"><div class="inline-block">Nav Item 1</div></a>
+  </nav>
+
+ <div class="wrapper">
+    <div class="left2">
+      <img src="images/logo.png" class="logo">
+      <p>Hi i'm a logo!</p>
+    </div>
+    <div class="right2">
+      <div class="card">
+      </div>
+      <div class="card">
+      </div>
+      <div class="card">
+      </div>
+    </div>
+  </div>
+</div>
+</div> 
+
+
 </body>
 </html>
