position fixed, relative and absolute

--- a/1_floats/float.html
+++ b/1_floats/float.html
@@ -71,6 +71,21 @@
 </div>
 </div> 
 
+ <br>
+ <h1>CSS Positioning (Relative, Absolute and Fixed)</h1>
+ 
+ <div class="relative">
+  <div class="left3">
+    <div class="absolute">
+      I'm positioned absolutely!
+    </div>
+  </div>
+  <div class="right3">
+  </div>
+</div>
 
+<div class="fixed">
+Hi, I'm a fixed element!
+</div>
 </body>
 </html>
