--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
         <li>
             <a href="1_floats/float.html">Week 17, Exercises 17.3: CSS Positioning Exercises</a>
         </li>
+        <li>
+            <a href="myfavoritepet.html">My Favorite Pets</a>
+        </li>
     </ul>
     </p>
 </body>
