--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <a href="1_floats/float.html">Week 17, Exercises 17.3: CSS Positioning Exercises</a>
         </li>
         <li>
-            <a href="myfavoritepet.html">My Favorite Pets</a>
+            <a href="myfavoritepet.html">Week 17: My Favorite Pets</a>
         </li>
     </ul>
     </p>
