added a link to new exercise

--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
         <li>
             <a href="myfavoritepet.html">Week 17: My Favorite Pets</a>
         </li>
+        <li>
+            <a href="CSS Flexbox/index.html">Week 18: Exercise 18.1: CSS Flexbox</a>
+        </li>
     </ul>
     </p>
 </body>
