CSS Alignment exercises

--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
         <li>
             <a href="CSS Flexbox/index.html">Week 18: Exercise 18.1: CSS Flexbox</a>
         </li>
+        <li>
+            <a href="CSS Align Items/flexbox.html">Week 18, Exercise 18.2: CSS Alignment</a>
+        </li>
     </ul>
     </p>
 </body>
