--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         <li>
             <a href="CSS Align Items/flexbox.html">Week 18, Exercise 18.2: CSS Alignment</a>
         </li>
+        <li><a href="Jakes_Eatery/Jakes_Eatery.html">Week 18, Jakes Eatery Webpage</a></li>
     </ul>
     </p>
 </body>
