--- a/index.html
+++ b/index.html
@@ -28,7 +28,16 @@
         <li>
             <a href="CSS Align Items/flexbox.html">Week 18, Exercise 18.2: CSS Alignment</a>
         </li>
-        <li><a href="Jakes_Eatery/Jakes_Eatery.html">Week 18, Jakes Eatery Webpage</a></li>
+        <li>
+            <a href="Jakes_Eatery/Jakes_Eatery.html">Week 18, Jakes Eatery Webpage</a>
+        </li>
+        <li>
+            <a href="Transform/index.html">Week 18, Exercise 18.3: CSS Transform</a>
+        </li>
+        <li>
+            <a href="Transitions/index.html">Week 18, Exercise 18.3 CSS Transitions</a>
+        </li>
+
     </ul>
     </p>
 </body>
