Advanced CSS: animations

--- a/index.html
+++ b/index.html
@@ -32,12 +32,14 @@
             <a href="Jakes_Eatery/Jakes_Eatery.html">Week 18, Jakes Eatery Webpage</a>
         </li>
         <li>
-            <a href="Transform/index.html">Week 18, Exercise 18.3: CSS Transform</a>
+            <a href="Transform/index.html">Week 18, Exercise 18.3: Advanced CSS: Transform</a>
         </li>
         <li>
-            <a href="Transitions/index.html">Week 18, Exercise 18.3 CSS Transitions</a>
+            <a href="Transitions/index.html">Week 18, Exercise 18.3 Advanced CSS:Transitions</a>
         </li>
-
+        <li>
+            <a href="animations/index.html">Week 18, Exercise 18.3 Advanced CSS:Animations</a>
+        </li>
     </ul>
     </p>
 </body>
